// Apply the java-library plugin to add support for Java Library
plugins {
    id 'java'
    id 'eclipse'
    id 'com.gradleup.shadow' version '9.4.1'
    id 'com.github.ben-manes.versions' version '0.54.0'
}

// Set default encoding to UTF-8
compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

// In this section you declare where to find the dependencies of your project
repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
    maven {
        url = uri('https://jitpack.io')
    }
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.20.0'
    implementation 'com.google.guava:guava:33.6.0-jre'
    implementation 'org.eclipse.jgit:org.eclipse.jgit:7.6.0.202603022253-r'
    implementation 'commons-io:commons-io:2.22.0'
    implementation 'org.eclipse.jdt:org.eclipse.jdt.core:3.45.0'
    implementation 'args4j:args4j:2.37'
    implementation 'commons-codec:commons-codec:1.22.0'
    implementation 'org.slf4j:slf4j-api:2.0.18'
    implementation 'com.github.sh5i:git-stein:0.7.0'
    implementation 'info.picocli:picocli:4.7.7'
    implementation 'ch.qos.logback:logback-classic:1.5.32'
    implementation 'ch.qos.logback:logback-core:1.5.32'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'
    testImplementation 'org.slf4j:slf4j-simple:2.0.18'
}

jar {
    manifest {
        attributes "Main-Class": "finergit.JarEntryPoint"
    }
}

shadowJar {
    minimize()
}

wrapper {
    gradleVersion = '9.5.1'
}
